--- a/packages/components/base/source/0-base/2-generic/media/_image.scss
+++ b/packages/components/base/source/0-base/2-generic/media/_image.scss
@@ -16,6 +16,6 @@ figure {
 caption,
 figcaption {
   padding-top: 0.35em;
-  font: var(--font-ui-xs);
+  font: var(--ks-font-ui-xs);
   font-style: italic;
 }
