--- a/packages/components/content/source/2-molecules/contact/contact.scss
+++ b/packages/components/content/source/2-molecules/contact/contact.scss
@@ -22,7 +22,7 @@ $vars: meta.module-variables(contact-vars);
   }
 
   &__links {
-    font: var(--font-ui-s);
+    font: var(--ks-font-ui-s);
     list-style: none;
     padding: 0;
     margin: 0;
