--- a/packages/components/content/source/2-molecules/visual/_visual-vars.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual-vars.scss
@@ -70,8 +70,8 @@ $headline: (
 
 $text: (
   '.c-visual__box': (
-    font: var(--font-copy-m),
-    font-weight: var(--font-weight-regular),
+    font: var(--ks-font-copy-m),
+    font-weight: var(--ks-font-weight-regular),
     margin: 1.2em 0 0,
   ),
 ) !default;
