--- a/packages/components/form/source/0-base/_input-field.scss
+++ b/packages/components/form/source/0-base/_input-field.scss
@@ -1,5 +1,5 @@
 @mixin wrapper($width: 100%) {
   display: inline-flex;
-  font: var(--font-ui-s);
+  font: var(--ks-font-ui-s);
   width: $width;
 }
