--- a/packages/components/base/source/0-base/2-generic/link/_link-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/link/_link-vars.scss
@@ -2,7 +2,7 @@ $name-: 'g-link' !default;
 
 $host: (
   ':root': (
-    font-weight: var(--font-weight-regular),
+    font-weight: var(--ks-font-weight-regular),
     text-decoration: underline,
     text-decoration-hover: inherit,
     color: var(--ks-text-color-default-interactive),
