--- a/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
+++ b/packages/components/base/source/0-base/2-generic/topic/_topic-vars.scss
@@ -3,8 +3,8 @@ $name-: 'g-topic' !default;
 $host: (
   ':root': (
     color: var(--ks-text-color-default),
-    font: var(--font-display-l),
-    font-weight: var(--font-weight-bold),
+    font: var(--ks-font-display-l),
+    font-weight: var(--ks-font-weight-bold),
     text-transform: null,
   ),
 ) !default;
