--- a/packages/components/base/source/1-atoms/tag-label/_tag-label-vars.scss
+++ b/packages/components/base/source/1-atoms/tag-label/_tag-label-vars.scss
@@ -9,22 +9,22 @@ $host: (
     color-hover: var(--ks-text-color-interface-hover),
   ),
   '.c-tag-label--s': (
-    font: var(--font-ui-xs),
-    font-weight: var(--font-weight-regular),
+    font: var(--ks-font-ui-xs),
+    font-weight: var(--ks-font-weight-regular),
     border-radius: 0.8rem,
     vertical-padding: 0.325rem,
     horizontal-padding: 0.65rem,
   ),
   '.c-tag-label--m': (
-    font: var(--font-ui-s),
-    font-weight: var(--font-weight-regular),
+    font: var(--ks-font-ui-s),
+    font-weight: var(--ks-font-weight-regular),
     border-radius: 1.25rem,
     vertical-padding: 0.4rem,
     horizontal-padding: 1rem,
   ),
   '.c-tag-label--l': (
-    font: var(--font-ui-m),
-    font-weight: var(--font-weight-regular),
+    font: var(--ks-font-ui-m),
+    font-weight: var(--ks-font-weight-regular),
     border-radius: 1.5rem,
     vertical-padding: 0.5rem,
     horizontal-padding: 1.25rem,
