--- a/packages/components/base/source/2-molecules/teaser/_teaser-vars.scss
+++ b/packages/components/base/source/2-molecules/teaser/_teaser-vars.scss
@@ -2,7 +2,7 @@ $name-: 'c-teaser' !default;
 
 $host: (
   '.c-teaser': (
-    font: var(--font-copy-m),
+    font: var(--ks-font-copy-m),
     color: var(--ks-text-color-default),
     background: var(--ks-background-color-primary-inverted-tbd),
     border: 1px solid var(--color-grey-1),
