--- a/packages/components/blog/source/2-molecules/post-teaser/post-teaser.scss
+++ b/packages/components/blog/source/2-molecules/post-teaser/post-teaser.scss
@@ -8,7 +8,7 @@ $vars: meta.module-variables(post-teaser-vars);
 @include custom-properties.styles($vars);
 
 .c-post-teaser {
-  --c-rich-text--font: var(--font-copy-s);
+  --c-rich-text--font: var(--ks-font-copy-s);
 
   @include grid.grid-container(1em);
   @include breakpoint.media('print') {
