--- a/packages/components/content/source/2-molecules/collapsible-box/_collapsible-box-vars.scss
+++ b/packages/components/content/source/2-molecules/collapsible-box/_collapsible-box-vars.scss
@@ -8,7 +8,7 @@ $host: (
 
 $header: (
   '.c-collapsible-box': (
-    font: var(--font-copy-m),
+    font: var(--ks-font-copy-m),
     padding: (
       xs: 1em 0,
       s: 1em,
