--- a/packages/components/content/source/2-molecules/storytelling/_storytelling-vars.scss
+++ b/packages/components/content/source/2-molecules/storytelling/_storytelling-vars.scss
@@ -4,8 +4,8 @@ $host: (
   '.c-storytelling': (
     background-color: null,
     color: var(--ks-text-color-default),
-    vertical-padding: var(--spacing-xl),
-    horizontal-padding: var(--spacing-m),
+    vertical-padding: var(--ks-spacing-xl),
+    horizontal-padding: var(--ks-spacing-m),
   ),
   '.c-headline': (
     margin-bottom: var(--c-headline--margin),
