--- a/packages/components/content/source/2-molecules/visual-slider/_visual-slider-vars.scss
+++ b/packages/components/content/source/2-molecules/visual-slider/_visual-slider-vars.scss
@@ -8,7 +8,7 @@ $nav: (
 
 $preview: (
   '.c-visual-slider': (
-    font: var(--font-ui-s),
+    font: var(--ks-font-ui-s),
     background: var(--ks-background-color-interface-interactive),
     background-hover: var(--ks-background-color-interface-interactive-hover),
     background-active: var(--ks-background-color-interface-interactive-current),
