--- a/packages/components/form/source/1-atoms/form-field/form-field.scss
+++ b/packages/components/form/source/1-atoms/form-field/form-field.scss
@@ -31,7 +31,7 @@ $vars: meta.module-variables(form-field-vars);
     width: 100%;
     background-color: var(--c-form-field--background);
     color: var(--c-form-field--color);
-    font: var(--font-ui-m);
+    font: var(--ks-font-ui-m);
     transition: 0.2s;
     resize: vertical;
 
@@ -76,7 +76,8 @@ $vars: meta.module-variables(form-field-vars);
       position: absolute;
       right: 0;
       bottom: calc(
-        (calc(var(--line-height-ui) * 1em) - var(--c-form-field_icon--size)) / 2
+        (calc(var(--ks-line-height-ui) * 1em) - var(--c-form-field_icon--size)) /
+          2
       );
       margin: $input-padding;
       color: var(--c-form-field_icon--color);
