--- a/packages/components/form/source/2-molecules/form-check-group/form-check-group.scss
+++ b/packages/components/form/source/2-molecules/form-check-group/form-check-group.scss
@@ -6,7 +6,7 @@ $vars: meta.module-variables(form-check-group-vars);
 @include custom-properties.styles($vars);
 
 .c-form-check-group {
-  font: var(--font-ui-s);
+  font: var(--ks-font-ui-s);
 
   &__label {
     display: inline-block;
