--- a/packages/components/content/source/2-molecules/visual/_visual__box.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__box.scss
@@ -7,7 +7,7 @@
   width: 100%;
   max-width: var(--c-visual_box--max-width);
   position: relative;
-  padding: 1.5rem var(--g-content-padding);
+  padding: 1.5rem var(--l-section--content-padding);
   border: var(--c-visual_box--border);
   background: var(--c-visual_box--background);
   color: var(--c-visual_box--color);
