--- a/packages/components/content/source/2-molecules/visual/_visual__content.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__content.scss
@@ -8,7 +8,7 @@
   margin: auto;
 
   @include breakpoint.media('≥s') {
-    padding: var(--g-content-padding);
+    padding: var(--l-section--content-padding);
     flex-grow: 1; // = 100% height
   }
 
@@ -34,12 +34,12 @@
   }
 
   &--indent {
-    max-width: var(--g-content-width-default);
+    max-width: var(--l-section--content-width-default);
   }
 
   &--inbox,
   &:only-child {
-    padding: var(--g-content-padding);
+    padding: var(--l-section--content-padding);
   }
 
   .c-visual--no-crop & {
