--- a/packages/components/content/source/2-molecules/visual/_visual__box.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual__box.scss
@@ -50,7 +50,7 @@
     }
   }
 
-  @include breakpoint.media('print') {
+  @media print {
     background-color: transparent;
     border: 2px solid var(--color-grey-3);
     margin: 1cm 0;
