--- a/packages/components/base/source/0-base/2-generic/headline/_headline.scss
+++ b/packages/components/base/source/0-base/2-generic/headline/_headline.scss
@@ -1,5 +1,4 @@
 @use 'sass:meta';
-@use '@kickstartds/core/source/core/breakpoint';
 @use '@kickstartds/core/source/core/custom-properties';
 @use './headline-vars';
 
@@ -18,7 +17,7 @@ h6 {
   color: var(--g-headline--color);
   margin: var(--g-headline--margin);
 
-  @include breakpoint.media('print') {
+  @media print {
     page-break-after: avoid;
   }
 
