--- a/packages/components/base/source/1-atoms/button/button/button.scss
+++ b/packages/components/base/source/1-atoms/button/button/button.scss
@@ -1,6 +1,5 @@
 @use 'sass:meta';
 @use 'bourbon/core/bourbon';
-@use '@kickstartds/core/source/core/breakpoint';
 @use '@kickstartds/core/source/core/custom-properties';
 @use '../../../0-base/1-tools/scss/button';
 @use './button-vars';
@@ -82,7 +81,7 @@ $vars: meta.module-variables(button-vars);
     }
   }
 
-  @include breakpoint.media('print') {
+  @media print {
     display: none;
   }
 
