--- a/packages/components/blog/source/2-molecules/post-teaser/post-teaser.scss
+++ b/packages/components/blog/source/2-molecules/post-teaser/post-teaser.scss
@@ -1,5 +1,4 @@
 @use 'sass:meta';
-@use '@kickstartds/core/source/core/breakpoint';
 @use '@kickstartds/core/source/core/custom-properties';
 @use './post-teaser-vars';
 
@@ -31,7 +30,7 @@ $vars: meta.module-variables(post-teaser-vars);
     }
   }
 
-  @include breakpoint.media('print') {
+  @media print {
     page-break-inside: avoid;
   }
 
