refactor: simplify tag-label-container

--- a/packages/components/base/source/2-molecules/tag-label-container/tag-label-container.scss
+++ b/packages/components/base/source/2-molecules/tag-label-container/tag-label-container.scss
@@ -1,9 +1,5 @@
-@use '../../0-base/1-tools/scss/grid';
-
 .tag-label-container {
-  @include grid.grid-container(0.5rem);
-
-  > * {
-    width: auto;
-  }
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
 }
