--- a/packages/components/base/source/1-atoms/table/table.scss
+++ b/packages/components/base/source/1-atoms/table/table.scss
@@ -1,11 +1,12 @@
 /* stylelint-disable no-descending-specificity */
 @use 'sass:meta';
 @use '@kickstartds/core/source/core/custom-properties';
-@use '@kickstartds/core/source/core/breakpoint';
+@use '@kickstartds/core/source/container/container-name';
 @use './table-vars';
 
 $vars: meta.module-variables(table-vars);
 @include custom-properties.styles($vars);
+@include container-name.name('table');
 
 .c-table {
   width: 100%;
@@ -62,7 +63,7 @@ $vars: meta.module-variables(table-vars);
   }
 
   &--responsive {
-    @include breakpoint.media('<s') {
+    @container table size(max-width: 450px) {
       thead {
         display: none;
       }
