--- a/packages/components/content/source/2-molecules/collapsible-box/_collapsible-box-vars.scss
+++ b/packages/components/content/source/2-molecules/collapsible-box/_collapsible-box-vars.scss
@@ -1,4 +1,5 @@
 $name-: 'c-collapsible-box';
+$container-name-: 'collapsible-box';
 
 $host: (
   '.c-collapsible-box': (
@@ -11,7 +12,7 @@ $header: (
     font: var(--font-copy-m),
     padding: (
       xs: 1em 0,
-      s: 1em,
+      640: 1em,
     ),
   ),
 ) !default;
@@ -20,7 +21,7 @@ $icon: (
   '.c-collapsible-box': (
     size: (
       xs: 1.65em,
-      s: 1.85em,
+      640: 1.85em,
     ),
     transform-open: rotate(-180deg),
   ),
@@ -30,7 +31,7 @@ $content: (
   '.c-collapsible-box': (
     padding: (
       xs: 1em 0,
-      s: 1em 4em 1em 1em,
+      640: 1em 4em 1em 1em,
     ),
   ),
 ) !default;
