--- a/packages/components/content/source/2-molecules/collapsible-box/_collapsible-box-vars.scss
+++ b/packages/components/content/source/2-molecules/collapsible-box/_collapsible-box-vars.scss
@@ -11,7 +11,7 @@ $header: (
   '.c-collapsible-box': (
     font: var(--font-copy-m),
     padding: (
-      xs: 1em 0,
+      0: 1em 0,
       640: 1em,
     ),
   ),
@@ -20,7 +20,7 @@ $header: (
 $icon: (
   '.c-collapsible-box': (
     size: (
-      xs: 1.65em,
+      0: 1.65em,
       640: 1.85em,
     ),
     transform-open: rotate(-180deg),
@@ -30,7 +30,7 @@ $icon: (
 $content: (
   '.c-collapsible-box': (
     padding: (
-      xs: 1em 0,
+      0: 1em 0,
       640: 1em 4em 1em 1em,
     ),
   ),
