--- a/packages/components/base/source/2-molecules/headline/_headline-vars.scss
+++ b/packages/components/base/source/2-molecules/headline/_headline-vars.scss
@@ -4,7 +4,7 @@ $container-name-: 'headline' !default;
 $host: (
   '.c-headline': (
     margin-bottom: (
-      xs: 1rem,
+      0: 1rem,
       960: 2rem,
     ),
     font-weight: var(--g-headline--font-weight),
