--- a/packages/components/base/source/2-molecules/slider/slider-arrows/_slider-arrows.scss
+++ b/packages/components/base/source/2-molecules/slider/slider-arrows/_slider-arrows.scss
@@ -1,4 +1,3 @@
-@use '@kickstartds/core/source/core/breakpoint';
 @use 'bourbon/core/bourbon';
 
 .c-slider__arrows {
@@ -6,7 +5,7 @@
   opacity: 0;
   transition: 0.3s;
 
-  @include breakpoint.media('≥m') {
+  @container slider size(min-width: 960px) {
     display: block;
   }
 
