--- a/packages/components/content/source/2-molecules/quote/quote.scss
+++ b/packages/components/content/source/2-molecules/quote/quote.scss
@@ -1,25 +1,26 @@
 @use 'sass:meta';
-@use '@kickstartds/core/source/core/breakpoint';
+@use '@kickstartds/core/source/container/container-name';
 @use '@kickstartds/core/source/core/custom-properties';
 @use './quote-vars';
 
 $vars: meta.module-variables(quote-vars);
 @include custom-properties.styles($vars);
+@include container-name.name('quote');
 
 .c-quote {
   align-items: var(--c-quote--align);
 
-  @include breakpoint.media('≥s') {
+  @container quote size(min-width: 640px) {
     display: flex;
   }
 
-  &__image-wrap {
+  &__image {
     flex-shrink: 0;
     max-width: var(--c-quote_image--max-width);
     text-align: center;
     margin-bottom: 1rem;
 
-    @include breakpoint.media('≥s') {
+    @container quote size(min-width: 640px) {
       margin-bottom: 0;
     }
   }
