--- a/packages/components/content/source/2-molecules/visual-slider/visual-slider.scss
+++ b/packages/components/content/source/2-molecules/visual-slider/visual-slider.scss
@@ -1,5 +1,4 @@
 @use 'sass:meta';
-@use '@kickstartds/core/source/core/breakpoint';
 @use '@kickstartds/core/source/core/custom-properties';
 @use 'bourbon/core/bourbon';
 
@@ -12,14 +11,14 @@ $vars: meta.module-variables(visual-slider-vars);
 .c-visual-slider {
   // hide preview on small screens
   .c-visual-slide--preview {
-    @include breakpoint.media('<s') {
+    @container slider size(max-width: 639px) {
       @include bourbon.hide-visually;
     }
   }
 
   // hide bullets on large screens
   .c-slider__bullet {
-    @include breakpoint.media('≥s') {
+    @container slider size(min-width: 640px) {
       display: none;
     }
   }
@@ -27,7 +26,7 @@ $vars: meta.module-variables(visual-slider-vars);
   .c-slider-nav {
     margin-top: 0.5em;
 
-    @include breakpoint.media('≥s') {
+    @container slider size(min-width: 640px) {
       margin-top: 0;
       border-bottom: 1px solid var(--c-visual-slider_nav--border-bottom-color);
     }
