--- a/packages/components/content/source/2-molecules/visual/_visual-vars.scss
+++ b/packages/components/content/source/2-molecules/visual/_visual-vars.scss
@@ -1,21 +1,22 @@
 $name-: 'c-visual' !default;
+$container-name-: 'visual';
 
 $host: (
   '.c-visual': (
     background: null,
     min-height: (
-      xs: 18rem,
-      s: 21rem,
-      m: 31.5rem,
-      l: 35rem,
+      0: 18rem,
+      640: 21rem,
+      960: 31.5rem,
+      1024: 35rem,
     ),
   ),
   '.c-visual--small': (
     min-height: (
-      xs: 13.35rem,
-      s: 13.2rem,
-      m: 15.8rem,
-      l: 20rem,
+      0: 13.35rem,
+      640: 13.2rem,
+      960: 15.8rem,
+      1024: 20rem,
     ),
   ),
 ) !default;
@@ -23,12 +24,12 @@ $host: (
 $image: (
   '.c-visual': (
     indent-left: (
-      xs: 20%,
-      s: 50%,
+      0: 20%,
+      640: 50%,
     ),
     indent-right: (
-      xs: 70%,
-      s: 50%,
+      0: 70%,
+      640: 50%,
     ),
   ),
 ) !default;
@@ -48,9 +49,9 @@ $box: (
     color: var(--color-white),
     background: var(--color-primary-alpha-8),
     max-width: (
-      xs: var(--g-content-width-default),
-      s: 50%,
-      xl: 40rem,
+      0: var(--g-content-width-default),
+      640: 50%,
+      1200: 40rem,
     ),
   ),
   '.c-visual__box--light': (
