--- a/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
+++ b/packages/components/base/source/1-atoms/rich-text/_rich-text-vars.scss
@@ -1,4 +1,5 @@
 $name-: 'c-rich-text';
+$container-name-: 'rich-text';
 
 $host: (
   ':root': (
@@ -7,6 +8,28 @@ $host: (
     horizontal-spacing: 1em,
     color: var(--color-black),
     font-weight: var(--font-weight-regular),
+  ),
+) !default;
+
+$headline: (
+  ':root': (
+    color: var(--color-black),
+    font: var(--font-display-m),
+    font-weight: var(--font-weight-bold),
+    text-transform: null,
+    margin: (
+      0: 0.75em 0 0.5em,
+      640: 1.5em 0 1em,
+    ),
+  ),
+  'h1': (
+    font: var(--font-display-xxl),
+  ),
+  'h2': (
+    font: var(--font-display-xl),
+  ),
+  'h3': (
+    font: var(--font-display-l),
   ),
 ) !default;
 
