--- a/packages/components/base/source/2-molecules/headline/headline.scss
+++ b/packages/components/base/source/2-molecules/headline/headline.scss
@@ -43,27 +43,27 @@ $vars: meta.module-variables(headline-vars);
 
   &__headline {
     margin: 0;
-    font: var(--g-headline--font);
+    font: var(--c-rich-text_headline--font);
     font-weight: var(--c-headline--font-weight);
     color: var(--c-headline--color);
   }
 
   &__h1 {
-    --g-headline--font: var(--font-display-xxl);
+    --c-rich-text_headline--font: var(--font-display-xxl);
   }
 
   &__h2 {
-    --g-headline--font: var(--font-display-xl);
+    --c-rich-text_headline--font: var(--font-display-xl);
   }
 
   &__h3 {
-    --g-headline--font: var(--font-display-l);
+    --c-rich-text_headline--font: var(--font-display-l);
   }
 
   &__h4,
   &__h5,
   &__p {
-    --g-headline--font: var(--font-display-m);
+    --c-rich-text_headline--font: var(--font-display-m);
   }
 
   &__subheadline {
